<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/menu_language_search"
    android:icon="@drawable/action_search"
    android:title="@string/search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:iconifiedByDefault="true"
    app:showAsAction="ifRoom|collapseActionView" />

  <item
    android:id="@+id/menu_language_save"
    android:icon="@drawable/ic_check_white_24dp"
    android:title="@string/save_languages"
    app:showAsAction="ifRoom" />
</menu>
