<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/toolbar_layout"
  android:layout_width="match_parent"
  android:layout_height="?actionBarSize">

  <android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="?colorPrimaryDark"
    app:popupTheme="@style/AppTheme.PopupOverlay"
    app:theme="@style/AppTheme.AppBarOverlay" />

  <org.kiwix.kiwixmobile.views.AnimatedProgressBar
      android:id="@+id/progress_view"
      android:layout_width="match_parent"
      android:layout_height="3dp"
      android:layout_alignParentBottom="true"
      app:backgroundColor="?attr/progressBackgroundColor"
      app:bidirectionalAnimate="false"
      app:progressColor="@color/accent"/>

</RelativeLayout>